Fix for bug 202477. Closing any browser window causes loooong hang (@ nsBookmarksService::WriteBookmarks). r=darin, sr=smfr, patch by bsmedberg